# Amani-AML-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  structure.py
dists/: adverse_media_parser-0.1.0-py3-none-any.whl  sanction_pep_parser-0.1.0-py3-none-any.whl
src/: __main__.py
src/amani_aml/: cli.py  config.py
src/amani_aml/api/: app.py
src/amani_aml/core/: config.py
src/amani_aml/pipelines/: resolver.py
src/amani_aml/services/: media_svc.py  resolver_svc.py  sanctions_svc.py
src/amani_aml/utils/: nat_to_iso.py
