[project]
name = "Amani-AML-Project"
version = "0.1.0"
description = "AML orchestration pipeline + compliant export API"
readme = "README.md"
requires-python =  "==3.12.12"
dependencies = [
    "adverse-media-parser",
    "sanction-pep-parser",
]

[project.scripts]
aml = "amani_aml.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
adverse-media-parser = { path = "dists/adverse_media_parser-0.1.0-py3-none-any.whl" }
sanction-pep-parser = { path = "dists/sanction_pep_parser-0.1.0-py3-none-any.whl" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
